# Bird-Identifier

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  netlify.toml  pyproject.toml  render.yaml  tasks.ps1
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: cub.yaml  nabirds.yaml  subset.yaml
configs/head/: hierarchical.yaml  linear.yaml
configs/model/: convnextv2_atto.yaml  convnextv2_base.yaml  convnextv2_nano.yaml
configs/taxonomy/: birds.yaml  cub.yaml
configs/train/: baseline.yaml  smoke.yaml
docs/: API.md  DEPLOY.md  HANDOFF_MACBOOK.md  OOD.md  PHASE_SUMMARIES.md  PROJECT_REPORT.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ConfidenceBar.tsx  ConservationBar.tsx  Dropzone.tsx  Footer.tsx  Header.tsx  ImagePreview.tsx  OtherPredictions.tsx  RecentUploads.tsx  ResultsPanel.tsx  SpeciesInfo.tsx  States.tsx  ThemeToggle.tsx
frontend/src/hooks/: usePredict.ts  useSpeciesInfo.ts
frontend/src/icons/: index.tsx
frontend/src/lib/: image.ts  species.ts
results/: RESULTS.md  ablation_table.md  calibration.md  nabirds_base_training_history.csv  nabirds_eda_report.md  nabirds_test_metrics.json  optimization_benchmark.md
scripts/: benchmark_loader.py  calibrate.py  download_data.py  eda.py  evaluate.py  export.py  make_subset.py  ood_eval.py  report_env.py  run_ablations.py  train.py
src/wildlife/: __init__.py  __main__.py
src/wildlife/data/: __init__.py  base.py  datasets.py  eda.py  imageio.py  loaders.py  prepare.py  registry.py  schema.py  taxonomy.py  transforms.py  visualize.py
src/wildlife/eval/: __init__.py  calibration.py  gradcam.py  metrics.py  ood.py  runner.py
src/wildlife/models/: __init__.py  factory.py  heads.py
src/wildlife/optimize/: __init__.py  benchmark.py  export.py  quantize.py
tests/: conftest.py  test_calibration_temp.py  test_dataset_registry.py  test_env_report.py  test_eval_metrics.py  test_model_heads.py  test_ood_reconcile.py  test_optimize_bench.py  test_schema_taxonomy.py  test_seed.py  test_serve_api.py  test_serve_preprocess.py  test_train_core.py  test_transforms_imageio.py
(+23 files in other folders)
