[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildlife-classifier"
version = "0.1.0"
description = "Fine-grained North American wildlife (bird) species classifier — end-to-end ML + full-stack."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Joshua Cortes" }]

# NOTE: torch/torchvision are installed separately per-platform (CUDA on the
# training box, CPU/MPS on Mac) — see README. They are intentionally NOT pinned
# here so the same pyproject works on Windows+CUDA and macOS.
dependencies = [
    "timm>=1.0.9",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "torchmetrics>=1.4.0",
    "numpy>=1.26,<3",
    "pandas>=2.2.0",
    "pillow>=10.4.0",
    "pillow-heif>=0.18.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
    "requests>=2.32.0",
    "grad-cam>=1.5.0",
]

[project.optional-dependencies]
tracking = ["wandb>=0.17.0", "tensorboard>=2.17.0"]
serve = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "onnxruntime>=1.19.0",
]
demo = ["gradio>=4.44.0"]
optimize = ["onnx>=1.16.0", "onnxruntime>=1.19.0", "onnxconverter-common>=1.14.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
wildlife = "wildlife.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]
extend-exclude = ["frontend", "notebooks", "data", "outputs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["wildlife"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's DI idiom deliberately calls these in argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Query",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: requires a CUDA GPU",
]

[tool.coverage.run]
source = ["wildlife"]
